--- a/QuantAlgos/qDRIFT.ipynb
+++ b/QuantAlgos/qDRIFT.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,13 +125,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given that the qDRIFT protocol uses a randomized splitting operation to construct evolution circuits, it is best to begin with this chief principle [4]. Hamiltonians employed within this stochastic algorithm are composed of weighted summands that are exponentiated as dictated by a normalized probability distribution. This is achieved by computing the summation of all weights, denoted as λ, normalizing the jth weight of the Hamiltonian by λ, and referencing this jth probability when randomly selecting exponentiated summands to place on the respective circuit, thus simulating time evolution. The Hamiltonian used in this process is:\n",
+    "Given that the qDRIFT protocol uses a randomized splitting operation to construct evolution circuits, it is best to begin with this chief principle [4]. Hamiltonians employed within this stochastic algorithm are composed of weighted summands that are exponentiated as dictated by a normalized probability distribution. This is achieved by computing the summation of all weights, denoted as ${λ}$, normalizing the ${j}$-th weight of the Hamiltonian by ${λ}$, and referencing this ${j}$-th probability when randomly selecting exponentiated summands to place on the respective circuit, thus simulating time evolution. The Hamiltonian used in this process is:\n",
     "\n",
-    "<img src= \"./External Images/Gen_Ham_Struct_qDRIFT.png\" \n",
-    "     align =\"center\"\n",
-    "     width =\"300\" />\n",
+    "$$ \\large H = \\sum_{j=1}^{L}{h_j H_j} $$\n",
     "\n",
-    "where L is the summand count of the Hamiltonian, and hj is the weight associated with the jth summand Hj [3]. "
+    "where ${L}$ is the summand count of the Hamiltonian, and ${h_j}$ is the weight associated with the ${j}$-th summand ${H_j}$ [3]. "
    ]
   },
   {
@@ -139,13 +137,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Accompanied by the constructed distribution, the operator summands of the Hamiltonian are appended to a generalized “drift” list that is subsequently repeated r times to approximate the ideal unitary operator U. This approximation, relative to a specified accuracy, is best portrayed at large repetitions counts. The “drift operator” used in this approximation is:\n",
+    "Accompanied by the constructed distribution, the operator summands of the Hamiltonian are appended to a generalized “drift” list that is subsequently repeated ${r}$ times to approximate the ideal unitary operator ${U}$. This approximation, relative to a specified accuracy, is best portrayed at large repetitions counts. The “drift operator” used in this approximation is:\n",
     "\n",
-    "<img src= \"./External Images/qDRIFT_Randomized_Operator_Struct.png\" \n",
-    "     align =\"center\"\n",
-    "     width =\"300\" />\n",
+    "$$ \\large V_r = \\prod_{j=1}^{L}{e^{i t h_j H_j / r}}$$\n",
     "\n",
-    "where t is the termination time/evolution time of the operator, and r is the repetition count of the “drift operator” [3]. "
+    "where ${t}$ is the termination time/evolution time of the operator, and ${r}$ is the repetition count of the “drift operator” [3]. "
    ]
   },
   {
@@ -155,11 +151,9 @@
    "source": [
     "The stochastic nature of this algorithm results in gate complexity and Trotter error bounds that are, as explained further within [3], independent of the summand count of the base Hamiltonian. As such, this independence results in a better upper bound for Trotter error in comparison to conventional Lie-Suzuki-Trotter formulas. This is showcased within the inequality:\n",
     "\n",
-    "<img src= \"./External Images/qDRIFT_Trotter_error.png\" \n",
-    "     align =\"center\"\n",
-    "     width =\"300\" />\n",
+    "$$ \\epsilon = N \\delta \\underset{ \\large \\sim}{<} \\frac{2 \\lambda^2 t^2}{N}$$\n",
     "\n",
-    "where ε is the error of the algorithm, N is the total gate count of the constructed qDRIFT circuit, and δ is the approximation error of a single “drift operator”, Vr [4]. The total gate count for the algorithm can be easily obtained by simple algebraic operations employing the expression above. However, this upper bound has been shown to be worse than higher-level Trotter formulas; this relationship is further demonstrated at threshold times wherein product formulas perform better than the qDRIFT protocol at large t [4, 5]."
+    "where ${ε}$ is the error of the algorithm, ${N}$ is the total gate count of the constructed qDRIFT circuit, and ${δ}$ is the approximation error of a single “drift operator”, ${V_r}$ [4]. The total gate count for the algorithm can be easily obtained by simple algebraic operations employing the expression above. However, this upper bound has been shown to be worse than higher-level Trotter formulas; this relationship is further demonstrated at threshold times wherein product formulas perform better than the qDRIFT protocol at large ${t}$ [4, 5]."
    ]
   },
   {
@@ -167,11 +161,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The pseudocode of the qDRIFT algorithm is detailed by the following figure:\n",
+    "The pseudocode of the qDRIFT algorithm [3] is detailed below:\n",
     "\n",
-    "<img src= \"./External Images/qDRIFT_Pseudocode.png\" \n",
-    "     width =\"500\" \n",
-    "     align = \"center\" />"
+    "**Input:** A list of Hamiltonian terms ${H = \\sum_{j}{h_j H_j}}$, a classical oracle function ${S A M P L E ()}$ that returns a value ${j}$ from the probability distribution ${p_j = h_j / (\\sum_{j}{h_j})}$ and a target precision ${\\epsilon}$.\n",
+    "\n",
+    "**Output:** An ordered list ${V_{list}}$ of unitary gates of the form ${e^{i \\tau H_j}}$\n",
+    "\n",
+    "1. ${\\lambda \\leftarrow \\sum_{j}{h_j}}$\n",
+    "\n",
+    "2. ${N \\leftarrow \\lceil 2 \\lambda^2 t^2 / \\epsilon \\rceil}$\n",
+    "\n",
+    "3. ${i \\leftarrow 0}$\n",
+    "\n",
+    "4. ${V_{list} = \\{}\\}$ (set gate list empty)\n",
+    "\n",
+    "5. While ${i < N }$\n",
+    "\n",
+    "     1. ${i \\leftarrow i + 1}$\n",
+    "\n",
+    "     2. ${j \\leftarrow SAMPLE()}$\n",
+    "\n",
+    "     3. Append ${e^{i \\lambda H_j / N}}$ to ordered list ${V_{list}}$\n",
+    "\n",
+    "6. Return ${V_{list}}$"
    ]
   },
   {
@@ -411,18 +423,14 @@
     "\n",
     "The Electronic Hamiltonian represents the internal energies of a molecule following the removal of kinetic energy terms from the Hamiltonian due to Born-Oppenheimer approximation [19]. This Hamiltonian has the nuclear coordinate form:\n",
     "\n",
-    "<img src= \"./External Images/Electronic_Ham.png\" \n",
-    "     align =\"center\"\n",
-    "     width =\"500\" />\n",
+    "$$ \\large \\mathcal{H}_{el} = - \\sum_{i}{\\frac{\\nabla^{2}_{r_i}}{m_e}} - \\sum_{I}{\\sum_{i}{\\frac{Z_I e^2}{\\mid R_I - r_i \\mid}}} \\ + \\ \\sum_{i}{\\sum_{j>i}{\\frac{e^2}{\\mid r_i - r_j \\mid}}} $$\n",
     "\n",
-    "where r_i and r_j are the coordinates of the ith and jth electron, respectively, m_e is the mass of the electron, Z_I is the atomic number of the nucleus I, R_I are the coordinates of the nucleus I, and e is the electron charge [17]. This form will not be relevant to practical applications of product formulas. The second quantized form (Molecular Orbital basis) of the Electronic Hamiltonian is:\n",
+    "where ${r_i}$ and ${r_j}$ are the coordinates of the ${i}$-th and ${j}$-th electron, respectively, ${m_e}$ is the mass of the electron, ${Z_I}$ is the atomic number of the nucleus ${I}$, ${R_I}$ are the coordinates of the nucleus ${I}$, and ${e}$ is the electron charge [17]. This form will not be relevant to practical applications of product formulas. The second quantized form (Molecular Orbital basis) of the Electronic Hamiltonian is:\n",
     "\n",
-    "<img src= \"./External Images/Electronic_Ham_2nd.png\" \n",
-    "     align =\"center\"\n",
-    "     width =\"500\" />\n",
+    "$$ \\large \\hat{H}_{elec} = \\sum_{pq}{h_{pq} \\hat{a}_{p}^{\\dagger} \\hat{a}_{q}^{\\dagger}} \\ + \\ \\frac{1}{2} \\sum_{pqrs}{h_{pqrs} \\hat{a}_{p}^{\\dagger} \\hat{a}_{q}^{\\dagger} \\hat{a}_{r} \\hat{a}_{s}} $$\n",
     "\n",
-    "where 〖a ̂_k〗^† and a ̂_k are the creation and annihilation operators of the fermions, and h_pq and h_pqrs\n",
-    "are the 1-body and 2-body integrals, respectively. Further information regarding second quantized Electronic Hamiltonians can be found here: [18]. Using the Jordan-Wigner Transformation, we will bring this fermionic Electronic Hamiltonian into the qubit space to manipulate it."
+    "where ${\\hat{a}_{k}^{†}}$ and ${\\hat{a}_{k}}$ , with ${k = pq,\\ pqrs,\\ p,\\ q,\\ r,\\ s}$,  are the creation and annihilation operators of the fermions, and ${h_{pq}}$ and ${h_{pqrs}}$\n",
+    "are the 1-body and 2-body integrals, respectively.  Further information regarding second quantized Electronic Hamiltonians can be found here: [18]. Using the Jordan-Wigner Transformation, we will bring this fermionic Electronic Hamiltonian into the qubit space to manipulate it."
    ]
   },
   {
@@ -430,7 +438,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will begin learning how to implement the qDRIFT protocoll using Electronic Hamiltonians via interactive examples. Be sure to read the comments in the code for more notes.\n"
+    "We will begin learning how to implement the qDRIFT protocol using Electronic Hamiltonians via interactive examples. Be sure to read the comments in the code for more notes.\n"
    ]
   },
   {
@@ -1194,11 +1202,9 @@
    "source": [
     "The Heisenberg Hamiltonian models the energies of and between nearby spins in various media when said spins are subjected to an arbitrary external magnetic field. The spin-basis form of this Hamiltonian (ferromagnetic) is:\n",
     "\n",
-    "<img src= \"./External Images/Gen_Heisenberg_Structure.png\" \n",
-    "     align =\"center\"\n",
-    "     width =\"300\" />\n",
+    "$$ \\large \\hat{H} = - J \\sum_{m}{\\hat{S}_m \\cdot{\\hat{S}_{m+1}}}$$\n",
     "\n",
-    "where J is the coupling constant, and S ̂_m  and S ̂_(m+1) are the spin operators at the lattice site m [18]."
+    "where ${J}$ is the coupling constant, and ${\\hat{S}_m}$  and ${\\hat{S}_{m+1}}$ are the spin operators at the lattice site ${m}$ [18]."
    ]
   },
   {
@@ -1208,11 +1214,9 @@
    "source": [
     "The Hamiltonian will undergo a logarithmic transformation to obtain a practical qubit space operator. Prior to this, the second quantized form of this Hamiltonian is: \n",
     "\n",
-    "<img src= \"./External Images/Bosonic_Heisenberg_Structure.png\" \n",
-    "     align =\"center\"\n",
-    "     width =\"500\" />\n",
+    "$$ \\large \\hat{H} = - J N S^2 + \\sum_{k}^{B.Z.}{\\omega_k a^{\\dagger}_{k} a^{\\dagger}_{k} + \\mathcal{O} (S^0)}$$\n",
     "\n",
-    "where J is the coupling constant, N is the total number of lattice sites, S is the spin coefficient (+1 or -1), B.Z. is the Brillouin Zone bound governing N, ω_k is the dispersion relation of the spin excitations, and a_k^† and a_k are the associated creation and annihilation operators of a bosonic system [18]. "
+    "where ${J}$ is the coupling constant, ${N}$ is the total number of lattice sites, ${S}$ is the spin coefficient ${(+1 \\ \\ or -1)}$, ${B.Z.}$ is the Brillouin Zone bound governing ${N}$, ${ω_k}$ is the dispersion relation of the spin excitations, and ${a_k^{†}}$ and ${a_k}$ are the associated creation and annihilation operators of a spin system [18]. "
    ]
   },
   {
@@ -1825,11 +1829,9 @@
    "source": [
     "The Transverse-field Ising Hamiltonian, like the Heisenberg Hamiltonian, represents a ferromagnetic lattice system that is occupied by spin ½ particles that experience interactions between nearest-neighbors and external magnetic fields:\n",
     "\n",
-    "<img src= \"./External Images/Ising_Ham.png\" \n",
-    "     align =\"center\"\n",
-    "     width =\"500\" />\n",
+    "$$ H = - \\sum_{\\langle i, j \\rangle}{J_{ij} Z_i Z_j} \\ - \\sum_{i}{g_i X_i}$$\n",
     "\n",
-    "This model features interactions between lattice sites at the i-th and j-th locations, and the external magnetic field acts on the i¬-th site. The variable J_ij is the coupling constant between i-th and j-th site, while the coupling parameters g_i determine the relative strength between the nearest neighbor interactions and external transverse field [21]."
+    "This model features interactions between lattice sites at the ${i}$-th and ${j}$-th locations, and the external magnetic field acts on the ${i}$-th site. The variable ${J_{ij}}$ is the coupling constant between ${i}$-th and ${j}$-th site, while the coupling parameters ${g_i}$ determine the relative strength between the nearest neighbor interactions and external transverse field [21]."
    ]
   },
   {
